<resources>
    <string name="app_name">TennisMateAndCourt</string>
    <string name="agree_condition">By continuing I agree with the Privacy Policy, Terms &amp; Condition</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_email_or_phone">Continue with email or phone</string>
    <string name="create_an_account_string">Create an Account</string>
    <string name="log_in_string">LOG IN</string>
    <string name="slogan">The best tennis social app to find tennis partners in your area!</string>
    <string-array name="gender">
        <item>Man</item>
        <item>Women</item>
        <item>Transgender</item>
        <item>Non-binary/non-conforming</item>
    </string-array>
    <string-array name="NTRPRating">
        <item>1.5</item>
        <item>2.0</item>
        <item>2.5</item>
        <item>3.0</item>
        <item>3.5</item>
        <item>4.0</item>
        <item>4.5</item>
        <item>5.0</item>
        <item>5.5</item>
        <item>6.0+</item>
    </string-array>
</resources>