<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@mipmap/ic_launcher" />

    <androidx.cardview.widget.CardView
        android:id="@+id/google_login_view"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/slogan_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <ImageView
                android:id="@+id/google"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/google"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/continue_with_google_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/continue_with_google_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/continue_with_google"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/fb_login_view"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/google_login_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <ImageView
                android:id="@+id/fb"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/fb"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/continue_with_facebook_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/continue_with_facebook_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/continue_with_facebook"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        app:cardElevation="8dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fb_login_view"
        android:id="@+id/email_or_phone_login_view"
        android:layout_marginTop="16dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <ImageView
                android:id="@+id/continue_with_email_or_phone"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/continue_with_email_or_phone_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic__email_20"/>

            <TextView
                android:paddingLeft="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/continue_with_email_or_phone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_email_or_phone"
                android:textSize="18sp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/slogan_tv"
        android:gravity="center"
        android:text="@string/slogan"
        android:textSize="18sp"
        android:layout_below="@id/app_icon"
        android:layout_marginTop="48dp"
        android:layout_centerHorizontal="true"
        android:typeface="serif"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/horizontal_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_or_phone_login_view"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/or_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"
            android:textColor="@color/line_1_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/horizontal_divider_left"
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:src="@drawable/line_1_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/or_tv"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/horizontal_divider_right"
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:src="@drawable/line_1_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/or_tv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        app:cardElevation="8dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/horizontal_divider"
        android:id="@+id/create_an_acc"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/green_heavy"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_gravity="center">

            <TextView
                android:paddingLeft="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/create_an_acc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_an_account_string"
                android:textSize="18sp"
                android:textColor="@color/white"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>